# cheatsheet_parser

./: .env.example  .gitignore  Makefile  README.md  environment.yml  experiment.ipynb  pyproject.toml  requirements.txt
examples/full-text/media/: cheatsheet-flow-diagram.md  cheatsheet.docx
examples/title-abstract-no-flow-diagram/media/: cheatsheet.docx
examples/title-abstract/media/: cheatsheet-flow-diagram.md
examples/title-abstract/responses/: 20250617_225525_b9af85e7_gemini.yml
modules/: evaluator.py  llm_provider.py
