[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cheatsheet_parser"
version = "0.0.1"
description = "Generated with GERPA 0.0.1"
authors = [ "Unknown Author <anonymous@example.com>",]
license = "Apache-2.0"
readme = "README.md"
[[tool.poetry.packages]]
include = "modules"

[tool.poetry.dependencies]
python = "^3.12.9"
