[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cheatsheet_parser"
version = "0.0.1"
description = "Generated with GERPA 0.0.1"
authors = [ "Unknown Author <anonymous@example.com>",]
license = "Apache-2.0"
readme = "README.md"
[[tool.poetry.packages]]
include = "modules"

[tool.poetry.dependencies]
python = "^3.12.9"
pydantic = "2.11.5"
python-dotenv = "1.1.0"
pyyaml = "6.0.2"
requests = "2.32.3"
openai = "1.82.0"
google-genai = "1.17.0"
ollama = "0.4.9"
pandas = "2.2.3"
numpy = "2.2.6"
matplotlib = "3.10.3"
seaborn = "0.13.2"
scikit-learn = "1.6.1"
jupyter = "1.1.1"
ipykernel = "6.29.5"
click = "8.2.1"
pymupdf = "^1.26.1"
